--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,47 @@
+---
+export type Props = {
+	title: string;
+}
+
+const { title } = Astro.props
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<main>
+			<h1>{title}</h1>
+			<slot />
+		</main>
 	</body>
 </html>
 
 <style>
+	* {
+		box-sizing: border-box;
+	}
+
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+
+	main {
+		display: grid;
+		grid-row: 2rem;
+		padding: 2rem;
+	}
+
+	h1 {
+		font-size: 2rem;
+		font-weight: bold;
 	}
 </style>
